--- a/Writeup/7_Conclusion.tex
+++ b/Writeup/7_Conclusion.tex
@@ -1,1 +1,4 @@
 \chapter{Conclusion}
+In the current age of high speed networks carrying terabytes of data, security and privacy of data is often overlooked. Mostly due to lack of concern or lack of awareness regarding the various security threats that affect the network systems. The reliance of service providers and corporations on the MPLS network means that MPLS network is a lucrative target for attackers and thus making MPLS as secure as possible is of prime concern. This is what Opportunistic Security in MPLS network tries to accomplish by encrypting data whenever it is possible to do so so as to not affect the current on going data transfer process.
+
+However its impact on the performance of the system should also be taken into consideration. Any solution that weighs down the current functionality of the system is not ideal and will most likely not be implemented. Based on the experiment conducted in this project we observed that the implementation of the Encryption part of the MPLS OS introduces some slight overhead in the performance of the system. However this overhead is not that significant compared to the overall performance of the system which mostly remains at the same level as compared to the traditional MPLS system.
