--- a/Writeup/refs.bib
+++ b/Writeup/refs.bib
@@ -1,33 +1,253 @@
-@article{GRAYSON2009146,
-title = "Analysis of security threats to MPLS virtual private networks",
-journal = "International Journal of Critical Infrastructure Protection",
-volume = "2",
-number = "4",
-pages = "146 - 153",
-year = "2009",
-issn = "1874-5482",
-doi = "https://doi.org/10.1016/j.ijcip.2009.08.002",
-url = "http://www.sciencedirect.com/science/article/pii/S1874548209000237",
-author = "Denise Grayson and Daniel Guernsey and Jonathan Butts and Michael Spainhower and Sujeet Shenoi",
-keywords = "Multiprotocol label switching, Virtual private networks, Security analysis"
+@techreport{mpls-os-internet-draft,
+   AUTHOR = "A. Farrel, S. Farrell",
+   TITLE = "{Opportunistic Security in MPLS Networks
+draft-ietf-mpls-opportunistic-encrypt-03}",
+   TYPE="{nternet-Draft}",
+   PAGES = {1-39},
+   YEAR = {2017},
+   MONTH = {March},
+   URL={https://tools.ietf.org/html/draft-ietf-mpls-opportunistic-encrypt-03}
+}
+   
+@article{grayson2009analysis,
+  title={Analysis of security threats to MPLS virtual private networks},
+  author={Grayson, Denise and Guernsey, Daniel and Butts, Jonathan and Spainhower, Michael and Shenoi, Sujeet},
+  journal={International Journal of Critical Infrastructure Protection},
+  volume={2},
+  number={4},
+  pages={146--153},
+  year={2009},
+  publisher={Elsevier}
 }
 
-@Article{Alouneh2009,
-author="Alouneh, Sahel
-and En-Nouaary, Abdeslam
-and Agarwal, Anjali",
-title="MPLS security: an approach for unicast and multicast environments",
-journal="annals of telecommunications - annales des t{\'e}l{\'e}communications",
-year="2009",
-month="Jun",
-day="01",
-volume="64",
-number="5",
-pages="391--400",
-abstract="Multi-Protocol Label Switching (MPLS) network architecture does not protect the confidentiality of data transmitted. This paper proposes a mechanism to enhance the security in MPLS networks by using multi-path routing combined with a modified (k, n) threshold secret sharing scheme. An Internet Protocol (IP) packet entering MPLS ingress router can be partitioned into n shadow (share) packets, which are then assigned to maximally node disjoint paths across the MPLS network. The egress router at the end will be able to reconstruct the original IP packet if it receives any k share packets. The attacker must therefore tap at least k paths to be able to reconstruct the original IP packet that is being transmitted, while receiving k{\thinspace}-{\thinspace}1 or less of share packets makes it hard or even impossible to reconstruct the original IP packet. In this paper, we consider the multicast case in addition to the unicast. To our best knowledge, no work has been published for MPLS multicast security. We have implemented our model and measured its time complexity on variable packets size.",
-issn="1958-9395",
-doi="10.1007/s12243-009-0089-y",
-url="https://doi.org/10.1007/s12243-009-0089-y"
+@inproceedings{pise2005packet,
+  title={Packet Forwarding with Multiprotocol Label Switching.},
+  author={Pise, RN and Kulkarni, SA and Pawar, RV},
+  booktitle={IEC (Prague)},
+  pages={277--281},
+  year={2005}
+}
+
+ @techreport{rfc5920,
+   AUTHOR = "L. Fang",
+   TITLE = "{Security Framework for MPLS and GMPLS Networks}",
+   TYPE="{RFC}",
+   NUMBER=5920,
+   PAGES = {1-66},
+   YEAR = {2010},
+   MONTH = {July},
+   ISSN = {2070-1721},
+   URL={https://tools.ietf.org/html/rfc5920}
+   }
+   
+    @techreport{rfc4377,
+   AUTHOR = "T. Nadeau, M. Morrow, G. Swallow",
+   TITLE = "{Operations and Management (OAM) Requirements
+for Multi-Protocol Label Switched (MPLS) Networks}",
+   TYPE="{RFC}",
+   NUMBER=4377,
+   PAGES = {1-15},
+   YEAR = {2006},
+   MONTH = {February},
+   URL={https://tools.ietf.org/html/rfc4377}
+   }
+   
+       @techreport{rfc5860,
+   AUTHOR = "M. Vigoureux, D. Ward, M. Betts",
+   TITLE = "{Requirements for Operations, Administration, and Maintenance (OAM)
+in MPLS Transport Networks}",
+   TYPE="{RFC}",
+   NUMBER=5860,
+   PAGES = {1-17},
+   YEAR = {2010},
+   MONTH = {May},
+   URL={https://tools.ietf.org/html/rfc5860}
+   }
+   
+@techreport{rfc3032,
+   AUTHOR = "E. Rosen, D. Tappan, G. Fedorkow, Y. Rekhter, D. Farinacci, A. Conta",
+   TITLE = "{MPLS Label Stack Encoding}",
+   TYPE="{RFC}",
+   NUMBER=3032,
+   PAGES = {1-23},
+   YEAR = {2001},
+   MONTH = {January},
+   URL={https://tools.ietf.org/html/rfc3032}
+   }
+   
+   @inproceedings{guernsey2010security,
+  title={Security analysis of the mpls label distribution protocol},
+  author={Guernsey, Daniel and Engel, Aaron and Butts, Jonathan and Shenoi, Sujeet},
+  booktitle={International Conference on Critical Infrastructure Protection},
+  pages={127--139},
+  year={2010},
+  organization={Springer}
+}
+
+@book{davie2000mpls,
+  title={MPLS: technology and applications},
+  author={Davie, Bruce S and Rekhter, Yakov},
+  year={2000},
+  publisher={Morgan Kaufmann Publishers Inc.}
+}
+
+@techreport{braden1997resource,
+  title={Resource reservation protocol (RSVP)--Version 1 functional specification},
+  author={Braden, Robert and Zhang, Lixia and Berson, Steve and Herzog, Shai and Jamin, Sugih},
+  year={1997}
 }
 
 
+       @techreport{rfc7435,
+   AUTHOR = "V. Dukhovni",
+   TITLE = "{Opportunistic Security: Some Protection Most of the Time
+Abstract}",
+   TYPE="{RFC}",
+   NUMBER=7435,
+   PAGES = {1-11},
+   YEAR = {2014},
+   MONTH = {December},
+   URL={https://tools.ietf.org/html/rfc7435}
+   }
+   
+ @techreport{rfc7296,
+   AUTHOR = "C. Kaufman, P. Hoffman, Y. Nir, P. Eronen, T. Kivinen",
+   TITLE = "{Internet Key Exchange Protocol Version 2 (IKEv2)}",
+   TYPE="{RFC}",
+   NUMBER=7296,
+   PAGES = {1-142},
+   YEAR = {2014},
+   MONTH = {October},
+   URL={https://tools.ietf.org/html/rfc7296}
+   }
+   
+    @techreport{rfc5116,
+   AUTHOR = "D. McGrew",
+   TITLE = "{An Interface and Algorithms for Authenticated Encryption}",
+   NUMBER=5116,
+   PAGES = {1-22},
+   YEAR = {2008},
+   MONTH = {January},
+   URL={https://tools.ietf.org/html/rfc5116}
+   }
+   
+   
+@techreport{rfc4385,
+   AUTHOR = "S. Bryant, G. Swallow, L. Martini, D. McPherson",
+   TITLE = "{Pseudowire Emulation Edge-to-Edge (PWE3)
+                 Control Word for Use over an MPLS PSN}",
+   NUMBER=4385,
+   PAGES = {1-12},
+   YEAR = {2006},
+   MONTH = {February},
+   URL={https://tools.ietf.org/html/rfc4385}
+   }
+   
+   @inproceedings{lantz2010network,
+  title={A network in a laptop: rapid prototyping for software-defined networks},
+  author={Lantz, Bob and Heller, Brandon and McKeown, Nick},
+  booktitle={Proceedings of the 9th ACM SIGCOMM Workshop on Hot Topics in Networks},
+  pages={19},
+  year={2010},
+  organization={ACM}
+}
+
+@inproceedings{de2014using,
+  title={Using mininet for emulation and prototyping software-defined networks},
+  author={De Oliveira, Rog{\'e}rio Le{\~a}o Santos and Shinoda, Ailton Akira and Schweitzer, Christiane Marie and Prete, Ligia Rodrigues},
+  booktitle={Communications and Computing (COLCOM), 2014 IEEE Colombian Conference on},
+  pages={1--6},
+  year={2014},
+  organization={IEEE}
+}
+
+@online{OVS,
+  title = {Production Quality, Multilayer Open Virtual Switch},
+  year = 2016,
+  url = {https://www.openvswitch.org/},
+  urldate = {2018-08-30}
+}
+
+@inproceedings{pfaff2015design,
+  title={The Design and Implementation of Open vSwitch.},
+  author={Pfaff, Ben and Pettit, Justin and Koponen, Teemu and Jackson, Ethan J and Zhou, Andy and Rajahalme, Jarno and Gross, Jesse and Wang, Alex and Stringer, Joe and Shelar, Pravin and others},
+  booktitle={NSDI},
+  volume={15},
+  pages={117--130},
+  year={2015}
+}
+
+@article{mckeown2008openflow,
+  title={OpenFlow: enabling innovation in campus networks},
+  author={McKeown, Nick and Anderson, Tom and Balakrishnan, Hari and Parulkar, Guru and Peterson, Larry and Rexford, Jennifer and Shenker, Scott and Turner, Jonathan},
+  journal={ACM SIGCOMM Computer Communication Review},
+  volume={38},
+  number={2},
+  pages={69--74},
+  year={2008},
+  publisher={ACM}
+}
+
+@online{OVSMail2,
+  title = {[ovs-discuss] Error when popping mpls tag from vlan tagged	packet},
+  year = 2016,
+  url = {https://mail.openvswitch.org/pipermail/ovs-discuss/2016-April/040813.html},
+  urldate = {2016-04-20}
+}
+
+@online{OVSmail1,
+  title = {[ovs-discuss] Reg pushing two mpls labels},
+  year = 2014,
+  url = {https://mail.openvswitch.org/pipermail/ovs-discuss/2014-November/035550.html},
+  urldate = {2014-11-21}
+}
+
+@inproceedings{zha2018instrumenting,
+  title={Instrumenting Open vSwitch with Monitoring Capabilities: Designs and Challenges},
+  author={Zha, Zili and Wang, An and Guo, Yang and Montgomery, Doug and Chen, Songqing},
+  booktitle={Proceedings of the Symposium on SDN Research},
+  pages={16},
+  year={2018},
+  organization={ACM}
+}
+
+@article{spainhower2008security,
+  title={Security analysis of RSVP-TE signaling in MPLS networks},
+  author={Spainhower, Michael and Butts, Jonathan and Guernsey, Daniel and Shenoi, Sujeet},
+  journal={International Journal of Critical Infrastructure Protection},
+  volume={1},
+  pages={68--74},
+  year={2008},
+  publisher={Elsevier}
+}
+
+@article{alouneh2009novel,
+  title={A novel path protection scheme for MPLS networks using multi-path routing},
+  author={Alouneh, Sahel and Agarwal, Anjali and En-Nouaary, Abdeslam},
+  journal={Computer Networks},
+  volume={53},
+  number={9},
+  pages={1530--1545},
+  year={2009},
+  publisher={Elsevier}
+}
+
+@online{NSA,
+author = {Zack Whittaker},
+  title = {NSA is so overwhelmed with data, it's no longer effective, says whistleblower},
+  year = 2016,
+  url = {http://www.matthewaid.com/post/58904880659/nsa-surveillance-programs-cover-75-of-internet},
+  urldate = {2016-04-27}
+}
+
+@techreport{rfc8446 ,
+   AUTHOR = "E. Rescorla",
+   TITLE = "{The Transport Layer Security (TLS) Protocol Version 1.3
+}",
+ISSN= 2070-1721
+   NUMBER=8446,
+   PAGES = {1-160},
+   YEAR = {2018},
+   MONTH = {August},
+   URL={https://tools.ietf.org/html/rfc8446 }
+   }
